Update install.sh